tests/paczka1/small_fuzzy/91305317.err
Error in line 13: SXDh198j4v1 S930 90,9
